# accel

./: CMakeLists.txt  README.md  conanfile.py
cmake/: kinet-accelConfig.cmake.in
include/kinet/accel/: accel.hpp  backend_api.h  c_api.h  crypto.hpp  dex.hpp  fhe.hpp  lattice.hpp  ml.hpp  tensor.hpp  zk.hpp
src/: c_api.cpp  crypto.cpp  dex.cpp  fhe.cpp  lattice.cpp  ml.cpp  session.cpp  tensor.cpp  zk.cpp
